--- a/composer.json
+++ b/composer.json
@@ -36,26 +36,18 @@
         
         "wpackagist-plugin/google-analytics-for-wordpress": "~5.4.0",
         
-        "wpackagist-plugin/imsanity": "~2.3.0",
-        
-        "wpackagist-plugin/posts-to-posts":"~1.6.0",
-        
         "wpackagist-plugin/taxonomy-terms-order": "~1.4.0",
         
-        "wpackagist-plugin/user-role-editor": "~4.18.0",
-        "wpackagist-plugin/user-switching" : "~1.0.0",
-        
         "wpackagist-plugin/w3-total-cache": "~0.9.0",
-        "wpackagist-plugin/woocommerce": "2.3.8",
+        "wpackagist-plugin/woocommerce": "2.3.9",
         "wpackagist-plugin/wordpress-seo":"~2.1.0",
-        "wpackagist-plugin/wp-thumb":"0.x"
+        "wpackagist-plugin/wp-thumb":"0.x",
+        "wpackagist-plugin/ultimate-coming-soon-page": "1.14.3"
         
     },
     "require-dev": {
         "wpackagist-plugin/developer": "~1.2",
         "wpackagist-plugin/blackbox-debug-bar": "~0.1.3",
-		"wpackagist-plugin/regenerate-thumbnails" : "~2.2.0",
-		"wpackagist-plugin/rewrite-rules-inspector" : "~1.2.0",
 		"wpackagist-plugin/simply-show-ids" : "~1.3.0"
     },
     "autoload": {
